--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -9,7 +9,7 @@
 <body>
 
     
-  <!-- <header>
+  <header>
     <h1>Hi, I'm Richard 👋</h1>
     <p>Welcome to my 3D Portfolio Website</p>
   </header>
@@ -30,7 +30,7 @@
 
   <footer>
     <p>📧 Contact: your.email@example.com</p>
-  </footer> -->
+  </footer>
 
 
 </body>
