--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -3,35 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio - Richard</title>
+  <title>Richard's 3D Portfolio</title> <!-- This is the title shown in the browser tab -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-    
-  <header>
-    <h1>Hi, I'm Richard 👋</h1>
-    <p>Welcome to my 3D Portfolio Website</p>
-  </header>
-
-  
-  <section class="spline">
-    <iframe src="YOUR_SPLINE_LINK_HERE" frameborder="0" width="100%" height="500px"></iframe>
-  </section>
-
-  <section>
-    <h2>🚀 My Projects</h2>
-    <ul>
-      <li><a href="https://github.com/yourusername/ev-bus-project">EV Bus Project</a></li>
-      <li><a href="https://github.com/yourusername/mini-piggy-bank">Mini Piggy Bank</a></li>
-      <li><a href="https://github.com/yourusername/group-ai">AI Group Project</a></li>
-    </ul>
-  </section>
-
-  <footer>
-    <p>📧 Contact: your.email@example.com</p>
-  </footer>
-
-
+  <h1>Welcome to My Portfolio</h1>
+  <!-- Your interactive content here -->
 </body>
 </html>
