--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Richard's 3D Portfolio</title> <!-- This is the title shown in the browser tab -->
+  <title>Richard’s 3D Portfolio</title> <!-- This appears in the browser tab -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Welcome to My Portfolio</h1>
-  <!-- Your interactive content here -->
+  <h1>Welcome to Richard’s Portfolio</h1>
+  <p>This is my interactive 3D portfolio built with GitHub Pages and Spline.</p>
 </body>
 </html>
