--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Welcome to Richard’s Portfolio</h1>
-  <p>This is my interactive 3D portfolio built with GitHub Pages and Spline.</p>
+  <header>
+    <div class="logo">Richard’s 3D Portfolio</div>
+    <button class="contact-btn">Contact</button>
+  </header>
+  
+
+
 </body>
 </html>
