add title and modified css.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Richard’s 3D Portfolio</title> <!-- This appears in the browser tab -->
+  <title>Pichsophearith (Richard) Lay’s Interactive 3D Portfolio</title> 
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -11,6 +11,17 @@
     <div class="logo">Richard’s 3D Portfolio</div>
     <button class="contact-btn">Contact</button>
   </header>
+
+  <main>
+    <div class="title-section">
+      <h1>Interaction Designer</h1>
+      <div class="location">
+        <p>Bachelor of Science in Information Technology<br>UTS<br></p>
+      </div>
+    </div>
+
+
+  </main>
   
 
 
