Edited bio and css

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       </div>
     </div>
 
+     <div class="bio-section">
+  <p class="bio">                
+    Enthusiastic and <span style="color: #76b0ab;">tech-driven Information Technology student</span> seeking a graduate or internship role in software development, app development, or UI/UX design. Offering hands-on experience with programming, <span style="color: #842626;">human-centred design</span>, and interactive 3D systems, with a strong foundation in <span style="color: #76b0ab;">Agile teamwork</span>, problem-solving, and digital innovation. Passionate about building <span style="color: #842626;">intuitive, efficient, and user-focused digital solutions</span>.
+  </p>
+</div>
+
+
 
   </main>
   
