added animated rb

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Richard’s 3D Portfolio</title> 
   <link rel="stylesheet" href="style.css" />
+  
+  <!-- Spline Viewer script -->
+  <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.32/build/spline-viewer.js"></script>
+
 </head>
 <body>
   <header>
@@ -19,6 +23,13 @@
         <p>Bachelor of Science in Information Technology<br>UTS<br></p>
       </div>
     </div>
+
+    <section class="spline-container">
+      <spline-viewer url="https://prod.spline.design/M7TTehoMQBydG0TI/scene.splinecode"></spline-viewer>
+    </section>
+
+
+
 
      <div class="bio-section">
   <p class="bio">                
