--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
           I'm motivated by solving real-world problems with creative and technical solutions.
           I’m eager to contribute to innovative digital teams. I’m passionate about leveraging technology to enhance efficiency in automation and deliver intelligent solutions.
         </p>
+        <img src="images/bg.jpg" alt="" class="background-img">
+        <div class="model-box">
+          
+        </div>
         
       </div>
 
