added img to second card

--- a/index.html
+++ b/index.html
@@ -62,7 +62,23 @@
       </div>
 
       <div class="card tech">
-        
+        <h2 class="card-title">My Technical Skills.</h2>
+        <p class="card-text">
+    <ul>
+      <li>Software & Game Development (C++, C#, Swift, JavaScript, etc.)</li>
+      <li>Web Development (HTML, CSS, PHP, Ajax, etc.)</li>
+      <li>Mobile App Development (iOS with Xcode)</li>
+      <li>3D Environments & Animation (Unity, Computer Graphics)</li>
+      <li>Creative Problem-Solving, Innovative Projects, and Team Collaboration</li>
+      <li>UI/UX & Interaction Design</li>
+      <li>Agile & Scrum Project Management</li>
+      <li>Database Fundamentals & Networking</li>
+    </ul> 
+
+        </p>
+        <img src="images/background.jpg" alt="" class="background-img">
+        <img src="images/skills.png" alt="" class="skills-group">
+   
       </div>
 
       <div class="card time">
