added ct details

--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
       </div>
 
       <div class="card time">
+        <h2 class="card-title"> My Contact Details</h2>
+
+        <p class="card-text">
+
+    <strong>Phone:</strong> <a href="tel:+61406384701">+61 0406 384 701</a><br>
+    <strong>Email:</strong> <a href="mailto:Phearithlay9@gmail.com">Phearithlay9@gmail.com</a><br>
+    <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/pichsophearith-lay-269295231/">Pichsophearith Lay</a><br>
+ 
+  </p>
         
       </div>
 
