--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Richard’s 3D Portfolio</title> 
   <link rel="stylesheet" href="style.css" />
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
   
   <!-- Spline Viewer script -->
   <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.32/build/spline-viewer.js"></script>
@@ -89,7 +91,12 @@
     <strong>Phone:</strong> <a href="tel:+61406384701">+61 0406 384 701</a><br>
     <strong>Email:</strong> <a href="mailto:Phearithlay9@gmail.com">Phearithlay9@gmail.com</a><br>
     <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/pichsophearith-lay-269295231/">Pichsophearith Lay</a><br>
- 
+     
+    <img src="images/bc2.jpg" alt="" class="background-img">
+
+    <button class="btn"><i class='bx bxs-send'></i> Contact Me</button>
+
+
   </p>
         
       </div>
