--- a/index.html
+++ b/index.html
@@ -43,6 +43,39 @@
 
   </main>
 
+    <section class="projects-section">
+  <h3>My Projects</h3>
+  <p>Double-Click here to view video</p>
+
+  <div class="slider" style="--width: 60rem; --height: 40rem; --quantity: 4;">
+    <div class="list">
+
+      <div class="item" style="--position: 1">
+        <video id="projectVideo1" loop playsinline controls
+          src="video/project1.mp4"></video>
+      </div>
+
+      <div class="item" style="--position: 2">
+        <video id="projectVideo2" loop playsinline controls
+          src="video/project2.mp4"></video>
+      </div>
+
+      <div class="item" style="--position: 3">
+        <video id="projectVideo3" loop playsinline controls
+          src="video/project3.mp4"></video>
+      </div>
+
+      <div class="item" style="--position: 4">
+        <video id="projectVideo4" loop playsinline controls
+          src="video/project-4.mp4"></video>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+
   <section class="about-section">
     <h1 class="about-title">About Me</h1>
 
@@ -118,36 +151,7 @@
 
 
 
-  <section class="projects-section">
-  <h3>My Projects</h3>
-  <p>Click here to view video</p>
 
-  <div class="slider" style="--width: 60rem; --height: 40rem; --quantity: 4;">
-    <div class="list">
-
-      <div class="item" style="--position: 1">
-        <video id="projectVideo1" loop playsinline controls
-          src="video/project-1.mp4"></video>
-      </div>
-
-      <div class="item" style="--position: 2">
-        <video id="projectVideo2" loop playsinline controls
-          src="video/project-2.mp4"></video>
-      </div>
-
-      <div class="item" style="--position: 3">
-        <video id="projectVideo3" loop playsinline controls
-          src="video/project-3.mp4"></video>
-      </div>
-
-      <div class="item" style="--position: 4">
-        <video id="projectVideo4" loop playsinline controls
-          src="video/project-4.mp4"></video>
-      </div>
-
-    </div>
-  </div>
-</section>
 
 
 
