--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <div class="item" style="--position: 4">
         <video id="projectVideo4" loop playsinline controls
-          src="video/project4.mp4"></video>
+          src="video/project4.mov"></video>
       </div>
 
     </div>
