--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
   <header>
     <div class="logo">Richard’s 3D Portfolio</div>
-    <button class="contact-btn">Contact</button>
+    <a href="#about" class="contact-btn">Contact</a>
+
   </header>
 
   <main>
@@ -76,7 +77,7 @@
 
 
 
-  <section class="about-section">
+  <section class="about-section" id="about">
     <h1 class="about-title">About Me</h1>
 
     <div class="bento-grid">
@@ -125,9 +126,9 @@
     <strong>Email:</strong> <a href="mailto:Phearithlay9@gmail.com">Phearithlay9@gmail.com</a><br>
     <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/pichsophearith-lay-269295231/">Pichsophearith Lay</a><br>
      
-    <img src="images/bc2.jpg" alt="" class="background-img">
+    <!-- <img src="images/bc2.jpg" alt="" class="background-img"> -->
 
-    <button class="btn"><i class='bx bxs-send'></i> Contact Me</button>
+    <!-- <button class="btn"><i class='bx bxs-send'></i> Contact Me</button> -->
 
 
   </p>
