--- a/index.html
+++ b/index.html
@@ -155,5 +155,10 @@
 
 
   <script src="app.js"></script>
+
+  <footer class="footer">
+  <p>&copy; 2025 Pichsophearith Lay’s 3D Portfolio. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
