--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h3>My Projects</h3>
   <p>Double-Click here to view video</p>
 
-  <div class="slider" style="--width: 60rem; --height: 40rem; --quantity: 4;">
+  <div class="slider" style="--width: 60rem; --height: 40rem; --quantity: 6;">
     <div class="list">
 
       <div class="item" style="--position: 1">
@@ -70,6 +70,17 @@
         <video id="projectVideo4" loop playsinline controls
           src="video/project4.mov"></video>
       </div>
+
+      <div class="item" style="--position: 5">
+        <video id="projectVideo5" loop playsinline controls 
+          src="video/project5.mov"></video>
+      </div>
+
+      <div class="item" style="--position: 6">
+        <video id="projectVideo6" loop playsinline controls 
+          src="video/project6.mov"></video>
+      </div>
+
 
     </div>
   </div>
