--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <div class="item" style="--position: 5">
         <video id="projectVideo5" loop playsinline controls 
-          src="video/project5.mov"></video>
+          src="video/project5.mp4"></video>
       </div>
 
       <div class="item" style="--position: 6">
