--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h3>My Projects</h3>
   <p>Double-Click here to view video</p>
 
-  <div class="slider" style="--width: 60rem; --height: 40rem; --quantity: 6;">
+  <div class="slider" style="--width: 60rem; --height: 40rem; --quantity: 7;">
     <div class="list">
 
       <div class="item" style="--position: 1">
@@ -79,6 +79,11 @@
       <div class="item" style="--position: 6">
         <video id="projectVideo6" loop playsinline controls 
           src="video/project6.mov"></video>
+      </div>
+
+      <div class="item" style="--position: 7">
+        <video id="projectVideo7" loop playsinline controls 
+          src="video/project7.mp4"></video>
       </div>
 
 
